--- a/src/client/styles/styles.scss
+++ b/src/client/styles/styles.scss
@@ -1,4 +1,32 @@
 @import "_form.scss";
 @import "_footer.scss";
 @import "_header.scss";
-@import "_base.scss";
+
+body {
+  	padding-top: 100px;
+
+  	.page__section{
+
+  		.section__heading {
+  			padding: 5px;
+  		}
+
+  		.article {
+
+	  		.article__heading{
+	  			padding: 5px;
+	  		}
+	  		
+
+	  		.article__descriptive{
+
+	  			.article__descriptive__item{
+	  				padding: 5px;
+	  			}
+	  		}
+	  	}
+
+  	}
+	  	
+}
+
