--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -100,7 +100,7 @@
 					pattern="^(http(s)?:\/\/)+[\w\-\._~:\/?#[\]@!\$&'\(\)\*\+,;=.]+$" required>
 					<div class="valid-feedback">Looks good!</div>
 					<div class="invalid-feedback">Please enter a valid URL.</div>
-					<small id="urlHelp" class="form-text text-danger">If you want to provide the URL please ignore below fields.</small>
+					<small id="urlHelp" class="form-text text-muted">If you want to provide the URL please ignore below fields.</small>
 				</fieldset>
 				<fieldset id="form__title" class="form-group d-none">
 					<label for="title" class="form__label">
@@ -109,7 +109,7 @@
 					<input type="text" name="title" id="title" placeholder="Please enter the title of text to analyze" class="form-control check__validation"/>
 					<div class="valid-feedback">Looks good!</div>
 					<div class="invalid-feedback">You need to enter a title in order to summarize the text.</div>
-					<small id="titleHelp" class="form-text text-danger">If you want to wrtie the article please dont enter a URL in the field above.</small>
+					<small id="titleHelp" class="form-text text-muted">If you want to wrtie the article please dont enter a URL in the field above.</small>
 				</fieldset>
 				<fieldset id="form__text" class="form__text form-group">
 					<label for="text" class="form__label">
@@ -118,7 +118,7 @@
 					<textarea class="form__text form-control check__validation" rows="13" name="text" id="text" placeholder="Please enter the text to analyze" required></textarea>
 					<div class="valid-feedback">Looks good!</div>
 					<div class="invalid-feedback">You need to enter some text to analyze or you can give a URL above.</div>
-					<small id="titleHelp" class="form-text text-danger">If you want to summerize the article please make to write a title.</small>
+					<small id="titleHelp" class="form-text text-muted">If you want to summerize the article please make to write a title.</small>
 				</fieldset>
 				<fieldset class="form__actions form-group">
 					<label for="form__actions" class="form__label form__label-options">
